TestSuite/PascalABCTests/errors/err0507.pas
begin
  var t := (1, a : owrgfhowrhg);
end.